--- a/app/src/main/res/layout/activity_gg2.xml
+++ b/app/src/main/res/layout/activity_gg2.xml
@@ -9,12 +9,15 @@
     <LinearLayout
         android:layout_width="368dp"
         android:layout_height="495dp"
-        android:layout_marginEnd="2dp"
-        android:layout_marginStart="2dp"
+        android:layout_marginBottom="6dp"
+        android:layout_marginEnd="6dp"
+        android:layout_marginStart="6dp"
+        android:layout_marginTop="6dp"
         android:orientation="vertical"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        tools:layout_editor_absoluteY="2dp">
+        app:layout_constraintTop_toTopOf="parent">
 
         <TextView
             android:id="@+id/textView"
@@ -23,8 +26,9 @@
             android:text="@string/register_text"
             android:textAlignment="center"
             android:textAllCaps="true"
-            android:textColor="#1CB92A"
-            android:textSize="17dp"
+            android:textColor="#9E49D6"
+            android:textSize="16dp"
+            android:textStyle="bold"
             tools:text="@string/register_text" />
 
         <EditText
@@ -47,15 +51,22 @@
             android:id="@+id/button3"
             android:layout_width="match_parent"
             android:layout_height="63dp"
-            android:text="Register
-" />
+            android:text="Register"
+            android:textColor="#9E49D6"
+            android:textSize="14dp"
+            android:background="#0BF1E3"
+            android:textStyle="bold" />
 
         <TextView
-            android:textAlignment="center"
             android:id="@+id/textalreadysign"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="@string/register_already" />
+            android:layout_height="59dp"
+            android:layout_marginTop="10dp"
+            android:text="@string/register_already"
+            android:textAlignment="center"
+            android:textColor="#9E49D6"
+            android:textSize="18dp"
+            android:textStyle="bold" />
     </LinearLayout>
 </android.support.constraint.ConstraintLayout>
 
