--- a/app/src/main/res/layout/activity_gg3.xml
+++ b/app/src/main/res/layout/activity_gg3.xml
@@ -9,47 +9,63 @@
     <LinearLayout
         android:layout_width="400dp"
         android:layout_height="587dp"
-        android:layout_marginBottom="8dp"
+        android:layout_marginBottom="6dp"
+        android:layout_marginEnd="6dp"
+        android:layout_marginStart="6dp"
+        android:layout_marginTop="6dp"
         android:orientation="vertical"
         app:layout_constraintBottom_toBottomOf="parent"
-        tools:layout_editor_absoluteX="5dp">
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
 
         <TextView
             android:id="@+id/textView2"
             android:layout_width="match_parent"
-            android:layout_height="66dp"
+            android:layout_height="60dp"
+            android:layout_marginTop="16dp"
             android:text="@string/login_text"
             android:textAlignment="center"
             android:textAllCaps="true"
-            android:textColor="#9E49D6"/>
+            android:textColor="#9E49D6"
+            android:textSize="14dp"
+            android:textStyle="normal|bold" />
 
         <EditText
             android:id="@+id/email_login"
             android:layout_width="match_parent"
             android:layout_height="65dp"
             android:ems="10"
-            android:inputType="textEmailAddress"
-            android:hint="@string/login_email"/>
+            android:hint="@string/login_email"
+            android:inputType="textEmailAddress" />
 
         <EditText
             android:id="@+id/password_login"
             android:layout_width="match_parent"
             android:layout_height="62dp"
             android:ems="10"
-            android:inputType="textPassword"
-            android:hint="@string/login_password"/>
+            android:hint="@string/login_password"
+            android:inputType="textPassword" />
 
         <Button
             android:id="@+id/login_button"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="@string/login_button" />
+            android:text="@string/login_button"
+            android:textColor="#9E49D6"
+            android:textSize="14dp"
+            android:background="#0BF1E3"
+            android:textStyle="bold" />
 
         <TextView
             android:id="@+id/sing_up_login"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="60dp"
+            android:layout_marginTop="10dp"
             android:text="@string/sign_in_text"
-            android:textAlignment="center"/>
+            android:textAlignment="center"
+            android:textColor="#9E49D6"
+            android:textSize="18dp"
+            android:textStyle="bold" />
     </LinearLayout>
 </android.support.constraint.ConstraintLayout>
