--- a/app/src/main/res/layout/activity_gg4.xml
+++ b/app/src/main/res/layout/activity_gg4.xml
@@ -6,29 +6,52 @@
     android:layout_height="match_parent"
     tools:context="com.gg.matei.avnutrition.gg4">
 
-    <EditText
-        android:id="@+id/editText"
-        android:layout_width="218dp"
-        android:layout_height="84dp"
-        android:ems="10"
-        android:inputType="textPersonName"
-        android:text="Name"
-        tools:layout_editor_absoluteX="99dp"
-        tools:layout_editor_absoluteY="62dp" />
+    <RelativeLayout
+        android:layout_width="395dp"
+        android:layout_height="587dp"
+        android:layout_margin="6dp"
+        android:layout_marginEnd="16dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        tools:layout_editor_absoluteY="8dp">
 
-    <Button
-        android:id="@+id/logout"
-        android:layout_width="213dp"
-        android:layout_height="39dp"
-        android:text="@string/Logout"
-        tools:layout_editor_absoluteX="99dp"
-        tools:layout_editor_absoluteY="267dp" />
+        <Button
+            android:id="@+id/logout"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentBottom="true"
+            android:layout_centerHorizontal="true"
+            android:text="@string/Logout"
+            android:textAlignment="center"
+            android:textColor="#9E49D6"
+            android:textSize="16sp"
+            android:textStyle="bold"
+            android:background="#0BF1E3"
+            tools:layout_editor_absoluteX="362dp"
+            tools:layout_editor_absoluteY="551dp" />
 
-    <LinearLayout
-        android:layout_width="401dp"
-        android:layout_height="576dp"
-        android:layout_marginBottom="12dp"
-        android:orientation="vertical"
-        app:layout_constraintBottom_toBottomOf="parent"
-        tools:layout_editor_absoluteX="5dp"></LinearLayout>
+        <CalendarView
+            android:id="@+id/calendarView"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_above="@+id/logout"
+            android:layout_alignParentEnd="true"
+            android:layout_alignParentStart="true"
+            android:layout_marginBottom="62dp" />
+
+        <TextView
+            android:id="@+id/edit_date"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_above="@+id/calendarView"
+            android:layout_alignParentEnd="true"
+            android:layout_alignParentStart="true"
+            android:layout_alignParentTop="true"
+            android:layout_marginBottom="47dp"
+            android:text="@string/edit_date"
+            android:textSize="20dp"
+            android:textAlignment="center"
+            android:textStyle="bold"
+            android:textColor="#9E49D6"/>
+    </RelativeLayout>
+
 </android.support.constraint.ConstraintLayout>
