--- a/app/src/main/res/layout/activity_gg4.xml
+++ b/app/src/main/res/layout/activity_gg4.xml
@@ -29,29 +29,33 @@
             tools:layout_editor_absoluteX="362dp"
             tools:layout_editor_absoluteY="551dp" />
 
-        <CalendarView
-            android:id="@+id/calendarView"
+        <EditText
+            android:id="@+id/alimente"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_above="@+id/logout"
-            android:layout_alignParentEnd="true"
-            android:layout_alignParentStart="true"
-            android:layout_marginBottom="62dp" />
-
-        <TextView
-            android:id="@+id/edit_date"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_above="@+id/calendarView"
             android:layout_alignParentEnd="true"
             android:layout_alignParentStart="true"
             android:layout_alignParentTop="true"
-            android:layout_marginBottom="47dp"
-            android:text="@string/edit_date"
-            android:textSize="20dp"
-            android:textAlignment="center"
-            android:textStyle="bold"
-            android:textColor="#9E49D6"/>
+            android:ems="10"
+            android:hint="Introduceti alimentele consumate"
+            android:inputType="textPersonName" />
+
+        <Spinner
+            android:id="@+id/spinnerTipulMesei"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_alignParentStart="true"
+            android:layout_below="@+id/alimente" />
+
+        <Button
+            android:id="@+id/save"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentStart="true"
+            android:layout_below="@+id/spinnerTipulMesei"
+            android:layout_marginTop="21dp"
+            android:text="Save" />
+
     </RelativeLayout>
 
 </android.support.constraint.ConstraintLayout>
