--- a/app/src/main/res/layout/activity_gg4.xml
+++ b/app/src/main/res/layout/activity_gg4.xml
@@ -45,7 +45,8 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_alignParentStart="true"
-            android:layout_below="@+id/alimente" />
+            android:layout_below="@+id/alimente"
+            android:entries="@array/TipulMesei" />
 
         <Button
             android:id="@+id/save"
