--- a/app/src/main/res/layout/activity_gg2.xml
+++ b/app/src/main/res/layout/activity_gg2.xml
@@ -7,8 +7,8 @@
     tools:context="com.gg.matei.avnutrition.gg2">
 
     <LinearLayout
-        android:layout_width="368dp"
-        android:layout_height="495dp"
+        android:layout_width="385dp"
+        android:layout_height="581dp"
         android:layout_marginBottom="6dp"
         android:layout_marginEnd="6dp"
         android:layout_marginStart="6dp"
@@ -32,6 +32,14 @@
             tools:text="@string/register_text" />
 
         <EditText
+            android:id="@+id/nume"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:ems="10"
+            android:hint="Enter your name"
+            android:inputType="textPersonName" />
+
+        <EditText
             android:id="@+id/emailregister"
             android:layout_width="match_parent"
             android:layout_height="76dp"
@@ -47,20 +55,26 @@
             android:hint="@string/password_register"
             android:inputType="textPassword" />
 
+        <CheckBox
+            android:id="@+id/savepassword"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:hint="Remember Username and Password" />
+
         <Button
             android:id="@+id/button3"
             android:layout_width="match_parent"
             android:layout_height="63dp"
+            android:background="#0BF1E3"
             android:text="Register"
             android:textColor="#9E49D6"
             android:textSize="14dp"
-            android:background="#0BF1E3"
             android:textStyle="bold" />
 
         <TextView
             android:id="@+id/textalreadysign"
             android:layout_width="match_parent"
-            android:layout_height="59dp"
+            android:layout_height="45dp"
             android:layout_marginTop="10dp"
             android:text="@string/register_already"
             android:textAlignment="center"
