--- a/app/src/main/res/layout-land/activity_gg3.xml
+++ b/app/src/main/res/layout-land/activity_gg3.xml
@@ -23,7 +23,7 @@
         <TextView
             android:id="@+id/textView2"
             android:layout_width="match_parent"
-            android:layout_height="60dp"
+            android:layout_height="match_parent"
             android:layout_marginTop="16dp"
             android:text="@string/login_text"
             android:textAlignment="center"
@@ -35,7 +35,7 @@
         <EditText
             android:id="@+id/email_login"
             android:layout_width="match_parent"
-            android:layout_height="65dp"
+            android:layout_height="match_parent"
             android:ems="10"
             android:hint="@string/login_email"
             android:inputType="textEmailAddress" />
