--- a/app/src/main/res/layout-land/activity_gg4.xml
+++ b/app/src/main/res/layout-land/activity_gg4.xml
@@ -16,7 +16,7 @@
 
         <Button
             android:id="@+id/logout"
-            android:layout_width="150dp"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignBaseline="@+id/save"
             android:layout_alignBottom="@+id/save"
@@ -44,14 +44,14 @@
         <Spinner
             android:id="@+id/spinnerTipulMesei"
             android:layout_width="match_parent"
-            android:layout_height="45dp"
-            android:layout_alignEnd="@+id/cantitate"
+            android:layout_height="wrap_content"
+            android:layout_alignEnd="@+id/lista_jurnal2"
             android:layout_below="@+id/alimente"
             android:entries="@array/TipulMesei" />
 
         <Button
             android:id="@+id/save"
-            android:layout_width="125dp"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentStart="true"
             android:layout_below="@+id/cantitate"
@@ -59,7 +59,7 @@
 
         <ListView
             android:id="@+id/lista_jurnal2"
-            android:layout_width="388dp"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_below="@+id/logout"
             android:layout_centerHorizontal="true"
@@ -69,7 +69,7 @@
         <EditText
             android:id="@+id/cantitate"
             android:layout_width="match_parent"
-            android:layout_height="50dp"
+            android:layout_height="wrap_content"
             android:layout_alignStart="@+id/save"
             android:layout_below="@+id/spinnerTipulMesei"
             android:layout_marginLeft="5dp"
