--- a/app/src/main/res/layout-land/activity_gg4.xml
+++ b/app/src/main/res/layout-land/activity_gg4.xml
@@ -12,7 +12,18 @@
         android:layout_margin="6dp"
         android:layout_marginEnd="8dp"
         app:layout_constraintEnd_toEndOf="parent"
-        tools:layout_editor_absoluteY="8dp">
+        tools:layout_editor_absoluteY="6dp">
+
+        <Button
+            android:id="@+id/jurnalul_meu"
+            android:layout_width="match_parent"
+            android:layout_height="50dp"
+            android:layout_alignParentStart="true"
+            android:layout_below="@+id/logout"
+            android:layout_marginTop="33dp"
+            android:text="Jurnalul Meu"
+            app:layout_constraintEnd_toEndOf="parent"
+            tools:layout_editor_absoluteY="443dp" />
 
         <Button
             android:id="@+id/logout"
@@ -20,7 +31,7 @@
             android:layout_height="wrap_content"
             android:layout_alignBaseline="@+id/save"
             android:layout_alignBottom="@+id/save"
-            android:layout_alignEnd="@+id/lista_jurnal2"
+            android:layout_alignEnd="@+id/cantitate"
             android:background="#0BF1E3"
             android:text="@string/Logout"
             android:textAlignment="center"
@@ -53,18 +64,9 @@
             android:id="@+id/save"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_alignParentStart="true"
+            android:layout_alignStart="@+id/alimente"
             android:layout_below="@+id/cantitate"
             android:text="@string/save_button" />
-
-        <ListView
-            android:id="@+id/lista_jurnal2"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_below="@+id/logout"
-            android:layout_centerHorizontal="true"
-            android:layout_marginLeft="5dp"
-            android:textAlignment="center" />
 
         <EditText
             android:id="@+id/cantitate"
