--- a/app/src/main/res/layout/activity_gg4.xml
+++ b/app/src/main/res/layout/activity_gg4.xml
@@ -7,24 +7,35 @@
     tools:context="com.gg.matei.avnutrition.gg4">
 
     <RelativeLayout
+        android:id="@+id/test"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_margin="6dp"
-        android:layout_marginEnd="8dp"
         app:layout_constraintEnd_toEndOf="parent"
-        tools:layout_editor_absoluteY="8dp">
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent"
+        tools:layout_editor_absoluteY="5dp">
+
+        <Button
+            android:id="@+id/jurnalul_meu"
+            android:layout_width="match_parent"
+            android:layout_height="50dp"
+            android:layout_alignParentStart="true"
+            android:layout_below="@+id/logout"
+            android:layout_marginTop="33dp"
+            android:text="@string/jurnalul_meu"
+            app:layout_constraintEnd_toEndOf="parent"
+            tools:layout_editor_absoluteY="443dp" />
 
         <Button
             android:id="@+id/logout"
             android:layout_width="150dp"
             android:layout_height="wrap_content"
-            android:layout_alignBaseline="@+id/save"
-            android:layout_alignBottom="@+id/save"
-            android:layout_alignEnd="@+id/lista_jurnal2"
+            android:layout_alignParentEnd="true"
+            android:layout_below="@+id/cantitate"
             android:background="#0BF1E3"
             android:text="@string/Logout"
             android:textAlignment="center"
-            android:textColor="#9E49D6"
+            android:textColor="#0833C3"
             android:textSize="16sp"
             android:textStyle="bold"
             tools:layout_editor_absoluteX="362dp"
@@ -36,46 +47,43 @@
             android:layout_height="wrap_content"
             android:layout_alignParentStart="true"
             android:layout_alignParentTop="true"
-            android:layout_marginLeft="5dp"
             android:ems="10"
             android:hint="@string/food_intake"
-            android:textStyle="bold" />
+            android:textStyle="bold"
+            android:textColorHint="#0833C3"/>
 
         <Spinner
             android:id="@+id/spinnerTipulMesei"
             android:layout_width="match_parent"
             android:layout_height="45dp"
-            android:layout_alignEnd="@+id/cantitate"
+            android:layout_alignParentStart="true"
             android:layout_below="@+id/alimente"
+            android:layout_marginTop="25dp"
             android:entries="@array/TipulMesei" />
 
         <Button
             android:id="@+id/save"
-            android:layout_width="125dp"
+            android:layout_width="150dp"
             android:layout_height="wrap_content"
-            android:layout_alignParentStart="true"
-            android:layout_below="@+id/cantitate"
-            android:text="@string/save_button" />
-
-        <ListView
-            android:id="@+id/lista_jurnal2"
-            android:layout_width="388dp"
-            android:layout_height="wrap_content"
-            android:layout_below="@+id/logout"
-            android:layout_centerHorizontal="true"
-            android:layout_marginLeft="5dp"
-            android:textAlignment="center" />
+            android:layout_alignBottom="@+id/logout"
+            android:layout_alignStart="@+id/alimente"
+            android:background="#0BF1E3"
+            android:text="@string/save_button"
+            android:textColor="#0833C3"
+            android:textStyle="bold" />
 
         <EditText
             android:id="@+id/cantitate"
             android:layout_width="match_parent"
-            android:layout_height="50dp"
-            android:layout_alignStart="@+id/save"
+            android:layout_height="100dp"
+            android:layout_alignParentStart="true"
             android:layout_below="@+id/spinnerTipulMesei"
-            android:layout_marginLeft="5dp"
+            android:layout_marginTop="17dp"
             android:ems="10"
             android:hint="@string/quantity"
-            android:inputType="textMultiLine" />
+            android:inputType="textMultiLine"
+            android:textColorHint="#0833C3"
+            android:textStyle="bold"/>
 
     </RelativeLayout>
 
