--- a/app/src/main/res/layout/gg5.xml
+++ b/app/src/main/res/layout/gg5.xml
@@ -20,5 +20,23 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.1">
 
+        <ListView
+            android:id="@+id/lista_jurnal2"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_alignParentStart="true"
+            android:layout_below="@+id/textView3"
+            android:layout_marginTop="9dp" />
+
+        <TextView
+            android:id="@+id/textView3"
+            android:layout_width="125dp"
+            android:layout_height="25dp"
+            android:layout_alignParentTop="true"
+            android:layout_centerHorizontal="true"
+            android:layout_marginBottom="14dp"
+            android:layout_marginTop="14dp"
+            android:text="Jurnalul Meu"
+            android:textAlignment="center" />
     </RelativeLayout>
 </android.support.constraint.ConstraintLayout>
